--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,12 @@
+title: My Page
+author: Jeeyoon Lim
+email: jlim0430@gmail.com
+description: > # this means to ignore newlines until "baseurl:"
+  I am the best.
+# social links
+twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
+github_username:  jeeyoon-lim # DO NOT include the @ character, or else the build will fail!
+
+show_excerpts: true # set to false to remove excerpts on the homepage
+
 theme: jekyll-theme-dinky
