--- a/Blog-posts.yml
+++ b/Blog-posts.yml
@@ -1,3 +1,7 @@
+layout: page
+title: "Blog Posts"
+permalink: jeeyoon.lim.github.io/Blog-posts
+
 ## Mic check one two, one two
 
 This here is the first blog post. Testing out Markdown/Jekyll/whatevertf
